--- a/auto_tasking.ipynb
+++ b/auto_tasking.ipynb
@@ -34,7 +34,7 @@
     "                    functions.append(f)\n",
     "\n",
     "    for f in functions:\n",
-    "        x = pydoc.render_doc(f, \"Help on %s\")\n",
+    "        x = pydoc.render_doc(f, renderer=pydoc.plaintext)\n",
     "        x_split = x.split('\\n')[2:]\n",
     "        x_split[0] = 'def ' + x_split[0] + ':'\n",
     "        x_split.append('    ...')\n",
@@ -61,12 +61,14 @@
    "metadata": {},
    "source": [
     "## Kaip naudotis\n",
-    "Iš pradžių galima pasirinkti dominančius metodus"
+    "Iš pradžių galima pasirinkti dominančius metodus'\n",
+    "\n",
+    "*Bug: celę reikia paleisti dukart*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "b6993c5f",
    "metadata": {},
    "outputs": [
@@ -74,50 +76,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "def t\bto\bo_\b_s\bse\bec\bc(t):\n",
-      "    Convert (hours, min, sec) to seconds.\n",
-      "    >>> to_sec((12, 59, 59))\n",
-      "    46799\n",
+      "def groupby_sum(data):\n",
+      "    Find sums of values that shares common name.\n",
+      "    >>> data = [('Z', 14), ('R', 12), ('G', 20), ('R', 5), ('R', 6)]\n",
+      "    >>> groupby_sum(data)\n",
+      "    {'Z': 14, 'R': 23, 'G': 20}\n",
       "\n",
       "    ...\n",
-      "def t\bto\bo_\b_M\bMS\bS(t):\n",
-      "    Convert seconds to (min, sec).\n",
-      "    >>> to_MS(3501)\n",
-      "    (58, 21)\n",
+      "def get_flags(colors, k=2):\n",
+      "    Find how many flags can you make out of piles of one-colored stickers, \n",
+      "    assuming each flag consumes k units on each pile\n",
+      "    >>> get_flags((14, 23, 20))\n",
+      "    7\n",
       "\n",
       "    ...\n",
-      "def s\bsu\bub\bb(tuple1, tuple2):\n",
-      "    Find (hours1, min1, sec1) - (hours2, min2, sec2) given the difference is less than 1 hour.\n",
-      "    USE: to_sec, to_MS\n",
-      "    >>> sub((16, 43, 9), (16, 23, 15))\n",
-      "    (19, 54)\n",
-      "\n",
-      "    ...\n",
-      "def s\bsu\bub\bbt\btr\bra\bac\bct\bt(d1, d2):\n",
-      "    Subtract the values of second dict from the values of first dict.\n",
-      "    USE: sub\n",
-      "    >>> d1 = {'A': (15, 20, 0), 'B': (16, 12, 12), 'C': (15, 15, 59), 'D': (16, 23, 9), 'E': (15, 15, 15), 'F': (16, 23, 9)}\n",
-      "    >>> d2 = {'D': (16, 43, 15), 'A': (15, 50, 10), 'E': (16, 5, 35), 'F': (16, 55, 59), 'B': (16, 42, 22)}\n",
-      "    >>> subtract(d1, d2)\n",
-      "    {'D': (20, 6), 'A': (30, 10), 'E': (50, 20), 'F': (32, 50), 'B': (30, 10)}\n",
-      "\n",
-      "    ...\n",
-      "def s\bso\bor\brt\bt(d):\n",
-      "    Sort dict lexicographically by values.\n",
-      "    >>> sort({3: (1, 2), 2: (1, 3), 1: (1, 2)})\n",
-      "    {1: (1, 2), 3: (1, 2), 2: (1, 3)}\n",
+      "def sub(d, number):\n",
+      "    Reduce all the values of dict by the same number (inplace)\n",
+      "    >>> d = {'Z': 14, 'R': 23, 'G': 20}\n",
+      "    >>> sub(d, 14)\n",
+      "    >>> d\n",
+      "    {'Z': 0, 'R': 9, 'G': 6}\n",
       "\n",
       "    ...\n"
      ]
     }
    ],
    "source": [
-    "for n in get_processors('VBE_new/E2018/pagrindinis/u2'): print(n)"
+    "for n in get_processors('exams/E2018/pagrindinis/u1'): print(n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "2e6a1e55",
    "metadata": {},
    "outputs": [
@@ -125,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "def r\bre\bea\bad\bd_\b_b\bbl\blo\boc\bck\bk(lines):\n",
+      "def read_block(lines):\n",
       "    Read block of data.   \n",
       "    >>> lines = ['Zigmas Nosis        16 43 15', 'Petras A. Petraitis 15 50 10', 'Romas Senasis       16 5 35']\n",
       "    >>> read_block(lines) # doctest: +NORMALIZE_WHITESPACE\n",
@@ -134,7 +124,7 @@
       "     'Romas Senasis       ': (16, 5, 35)}\n",
       "\n",
       "    ...\n",
-      "def r\bre\bea\bad\bd(name='U2.txt'):\n",
+      "def read(name='U2.txt'):\n",
       "    Reader function for input data.\n",
       "    >>> with open('U2.txt', 'r') as f: # doctest: +NORMALIZE_WHITESPACE\n",
       "    ...    print(f.read())\n",
@@ -171,12 +161,13 @@
     }
    ],
    "source": [
-    "for n in get_readers('VBE_new/E2018/pagrindinis/u2'): print(n)"
+    "for n in get_readers('exams/E2018/pagrindinis/u2'): \n",
+    "    print(n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "addbfa9e",
    "metadata": {},
    "outputs": [
@@ -184,25 +175,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "def w\bwr\bri\bit\bte\be(out, name='U2rez.txt'):\n",
-      "    Writer function for output data.\n",
-      "    \n",
-      "    >>> out = {'Zigmas Nosis        ': (20, 6), 'Jurgis Jurgutis     ': (30, 10), 'Petras A. Petraitis ': (30, 10), 'Rytis Uosis Ainis   ': (32, 50), 'Romas Senasis       ': (50, 20)}\n",
-      "    >>> write(out, name='U2rez.txt')\n",
-      "    >>> with open('U2rez.txt', 'r') as f: # doctest: +NORMALIZE_WHITESPACE\n",
+      "def write(flags, d, name='U1rez.txt'):\n",
+      "    Writer function for output data.    \n",
+      "    >>> flags, d = 7, {'Z': 0, 'R': 9, 'G': 6}\n",
+      "    >>> write(flags, d, name='U1rez.txt')\n",
+      "    >>> with open('U1rez.txt', 'r') as f: # doctest: +NORMALIZE_WHITESPACE\n",
       "    ...     print(f.read())\n",
-      "    Zigmas Nosis        20 6\n",
-      "    Jurgis Jurgutis     30 10\n",
-      "    Petras A. Petraitis 30 10\n",
-      "    Rytis Uosis Ainis   32 50\n",
-      "    Romas Senasis       50 20\n",
+      "    7\n",
+      "    G = 6\n",
+      "    Z = 0\n",
+      "    R = 9\n",
       "\n",
       "    ...\n"
      ]
     }
    ],
    "source": [
-    "for n in get_writers('VBE_new/E2018/pagrindinis/u2'): print(n)"
+    "for n in get_writers('exams/E2018/pagrindinis/u1'): print(n)"
    ]
   },
   {
